<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePassActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#F66566">

        <TextView
            android:id="@+id/child_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="找回密码"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_phone"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/input_phone"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:inputType="phone"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_new_pass"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/input_new_pass"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_new_pass_again"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/input_new_pass_again"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:inputType="textPassword"/>
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_check"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/input_check"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:inputType="number"/>
        <Button
            android:id="@+id/get_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_check"/>
    </LinearLayout>

    <Button
        android:id="@+id/input_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15sp"
        android:text="@string/input_yes"
        android:textSize="20sp"/>

</LinearLayout>