<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35sp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_chinese_name"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/to_register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15sp"
            android:layout_marginEnd="15sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/register_account"
            android:textSize="15sp"
            android:textStyle="italic"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="56sp"
        android:layout_height="56sp"
        android:layout_marginTop="30sp"
        android:src="@drawable/ic_login"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:gravity="center_vertical">
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="2"-->
                <!--android:text="@string/account_name"/>-->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_login_account"/>
            <EditText
                android:id="@+id/login_account"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="10"
                android:hint="@string/login_hint_account"
                android:inputType="phone"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginTop="10sp"
            android:gravity="center_vertical">
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="2"-->
                <!--android:text="@string/account_password"/>-->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_login_pass"/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="10"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginTop="10sp">
            <CheckBox
                android:id="@+id/remember_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/remember_password"/>
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130sp"
                android:textStyle="italic"
                android:textColor="#A85046"
                android:textSize="10sp"
                android:text="忘记密码？"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal">
            <!--
            android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
            -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="100sp"
                android:layout_marginStart="100sp"
                android:text="@string/login_account"/>
            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/register_account"/>
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>