<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectIdentityActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_above="@+id/select_gender"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/select_identity"
        android:textSize="35sp"
        android:textAlignment="center"/>
    <LinearLayout
        android:id="@+id/select_gender"
        android:orientation="horizontal"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:layout_centerInParent="true">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/gender_male"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="50sp"
            android:src="@drawable/child_boy" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/gender_female"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="25sp"
            android:src="@drawable/child_girl"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/select_gender">
        <TextView
            android:id="@+id/gender_male_text"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="50sp"
            android:textAlignment="center"
            android:text="@string/gender_male"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/gender_female_text"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="25sp"
            android:textAlignment="center"
            android:text="@string/gender_female"
            android:textSize="25sp"/>
    </LinearLayout>

</RelativeLayout>