<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--标题栏-->
    <RelativeLayout
        android:id="@+id/parent_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#FF0036">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/parent_user_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20sp"
            android:layout_marginStart="20sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/parent_father"/>
        <TextView
            android:id="@+id/parent_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"
            android:layout_toRightOf="@id/parent_user_icon"
            android:layout_toEndOf="@id/parent_user_icon"
            android:layout_centerVertical="true" />
        <ImageView
            android:id="@+id/parent_clear"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginRight="15sp"
            android:layout_marginEnd="15sp"
            android:layout_toLeftOf="@id/parent_setting"
            android:layout_toStartOf="@id/parent_setting"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_delete"/>
        <ImageView
            android:id="@+id/parent_setting"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginRight="15sp"
            android:layout_marginEnd="15sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_settings"/>
    </RelativeLayout>
        <!--android:text="@string/pull_refresh_latest_app_info"/>-->
    <!--用于显示App使用信息列表-->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_app_time_info_parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">
        <!--<TextView-->
            <!--android:id="@+id/swipe_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:textAlignment="center"-->
            <!--android:text="@string/pull_refresh_latest_app_info"/>-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/receive_info_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--<ListView-->
            <!--android:id="@+id/receive_list_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"/>-->
        <ProgressBar
            android:id="@+id/parent_net_work_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/parent_notify"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6D6F6"/>

    <!--底部导航栏-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#E5FEF6"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/my_children"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/my_setting"/>
        <TextView
            android:id="@+id/about_parent_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/my_info"/>
    </LinearLayout>


</LinearLayout>