<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WatchActivity">

    <FrameLayout
        android:id="@+id/watch_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--标题栏-->
            <RelativeLayout
                android:id="@+id/child_toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="#F66566">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/child_user_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginStart="20sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/child_boy" />
                <TextView
                    android:id="@+id/child_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginStart="15sp"
                    android:layout_toRightOf="@id/child_user_icon"
                    android:layout_toEndOf="@id/child_user_icon"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/clear_info"
                    android:src="@drawable/ic_delete"/>
            </RelativeLayout>

            <!--用于显示App使用信息列表-->
            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/refresh_app_time_info_child"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25">
                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:textAlignment="center"-->
                <!--android:text="@string/pull_refresh_latest_app_info" />-->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/use_info_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ProgressBar
                    android:id="@+id/child_net_work_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </android.support.v4.widget.SwipeRefreshLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E6D6F6"/>

            <!--底部导航栏-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center_vertical">
                <!--<view-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="#E1E1E1"/>-->
                <TextView
                    android:id="@+id/my_parents"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/my_parents"/>
                <TextView
                    android:id="@+id/about_child_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/my_info"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_child_edu"
        app:headerLayout="@layout/nav_child_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
